added transfer values

--- a/scrap.ipynb
+++ b/scrap.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,146 +149,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['1',\n",
-       " '',\n",
-       " '22',\n",
-       " '',\n",
-       " '2',\n",
-       " '',\n",
-       " '22',\n",
-       " '',\n",
-       " '3',\n",
-       " '',\n",
-       " '21',\n",
-       " '',\n",
-       " '4',\n",
-       " '',\n",
-       " '29',\n",
-       " '',\n",
-       " '5',\n",
-       " '',\n",
-       " '22',\n",
-       " '',\n",
-       " '6',\n",
-       " '',\n",
-       " '24',\n",
-       " '',\n",
-       " '7',\n",
-       " '',\n",
-       " '26',\n",
-       " '',\n",
-       " '8',\n",
-       " '',\n",
-       " '24',\n",
-       " '',\n",
-       " '9',\n",
-       " '',\n",
-       " '31',\n",
-       " '',\n",
-       " '10',\n",
-       " '',\n",
-       " '28',\n",
-       " '',\n",
-       " '11',\n",
-       " '',\n",
-       " '25',\n",
-       " '',\n",
-       " '12',\n",
-       " '',\n",
-       " '25',\n",
-       " '',\n",
-       " '13',\n",
-       " '',\n",
-       " '26',\n",
-       " '',\n",
-       " '14',\n",
-       " '',\n",
-       " '25',\n",
-       " '',\n",
-       " '15',\n",
-       " '',\n",
-       " '28',\n",
-       " '',\n",
-       " '16',\n",
-       " '',\n",
-       " '30',\n",
-       " '',\n",
-       " '17',\n",
-       " '',\n",
-       " '23',\n",
-       " '',\n",
-       " '18',\n",
-       " '',\n",
-       " '27',\n",
-       " '',\n",
-       " '19',\n",
-       " '',\n",
-       " '23',\n",
-       " '',\n",
-       " '20',\n",
-       " '',\n",
-       " '21',\n",
-       " '',\n",
-       " '21',\n",
-       " '',\n",
-       " '23',\n",
-       " '',\n",
-       " '22',\n",
-       " '',\n",
-       " '22',\n",
-       " '',\n",
-       " '23',\n",
-       " '',\n",
-       " '24',\n",
-       " '',\n",
-       " '24',\n",
-       " '',\n",
-       " '24',\n",
-       " '',\n",
-       " '25',\n",
-       " '',\n",
-       " '23',\n",
-       " '',\n",
-       " '1',\n",
-       " '',\n",
-       " '2',\n",
-       " '',\n",
-       " '3',\n",
-       " '',\n",
-       " '4',\n",
-       " '',\n",
-       " '5',\n",
-       " '']"
-      ]
-     },
-     "execution_count": 230,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "age_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['22', '22', '21', '29', '22', '24', '26', '24', '31', '28', '25', '25', '26', '25', '28', '30', '23', '27', '23', '21', '23', '22', '24', '24', '23', '2', '4']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_age_list = []\n",
     "for i in range(2, len(age_list), 4):\n",
@@ -303,6 +175,170 @@
    "outputs": [],
    "source": [
     "new_age_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nationality = soup.find_all(\"td\", class_=\"zentriert\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nationality"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "for nation in nationality:\n",
+    "    flags = nation.find_all('img')  \n",
+    "    if flags:  \n",
+    "        first_flag = flags[0]  \n",
+    "        first_nationality = first_flag['title']\n",
+    "        nationality_list.append(first_nationality)\n",
+    "        print(first_nationality)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 1\n",
+    "while i < len(nationality_list):\n",
+    "    del nationality_list[i]\n",
+    "    i += 1\n",
+    "print(nationality_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "values = soup.find_all(\"td\", class_=\"rechts hauptlink\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<td class=\"rechts hauptlink\"><a href=\"/erling-haaland/marktwertverlauf/spieler/418560\">€170.00m</a> </td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/phil-foden/marktwertverlauf/spieler/406635\">€110.00m</a> </td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/bukayo-saka/marktwertverlauf/spieler/433177\">€110.00m</a> <span class=\"icons_sprite green-arrow-ten\" title=\"Previous market value: €100.00m\"> </span></td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/harry-kane/marktwertverlauf/spieler/132098\">€90.00m</a> </td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/enzo-fernandez/marktwertverlauf/spieler/648195\">€85.00m</a> <span class=\"icons_sprite green-arrow-ten\" title=\"Previous market value: €55.00m\"> </span></td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/declan-rice/marktwertverlauf/spieler/357662\">€80.00m</a> </td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/rodri/marktwertverlauf/spieler/357565\">€80.00m</a> </td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/martin-odegaard/marktwertverlauf/spieler/316264\">€80.00m</a> <span class=\"icons_sprite green-arrow-ten\" title=\"Previous market value: €60.00m\"> </span></td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/kevin-de-bruyne/marktwertverlauf/spieler/88755\">€80.00m</a> </td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/bernardo-silva/marktwertverlauf/spieler/241641\">€80.00m</a> </td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/marcus-rashford/marktwertverlauf/spieler/258923\">€80.00m</a> <span class=\"icons_sprite green-arrow-ten\" title=\"Previous market value: €55.00m\"> </span></td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/gabriel-jesus/marktwertverlauf/spieler/363205\">€75.00m</a> </td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/luis-diaz/marktwertverlauf/spieler/480692\">€75.00m</a> </td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/ruben-dias/marktwertverlauf/spieler/258004\">€75.00m</a> </td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/bruno-fernandes/marktwertverlauf/spieler/240306\">€75.00m</a> </td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/mohamed-salah/marktwertverlauf/spieler/148455\">€70.00m</a> <span class=\"icons_sprite red-arrow-ten\" title=\"Previous market value: €80.00m\"> </span></td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/reece-james/marktwertverlauf/spieler/472423\">€70.00m</a> </td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/jack-grealish/marktwertverlauf/spieler/203460\">€70.00m</a> </td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/darwin-nunez/marktwertverlauf/spieler/546543\">€70.00m</a> </td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/gabriel-martinelli/marktwertverlauf/spieler/655488\">€70.00m</a> <span class=\"icons_sprite green-arrow-ten\" title=\"Previous market value: €60.00m\"> </span></td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/antony/marktwertverlauf/spieler/602105\">€70.00m</a> <span class=\"icons_sprite red-arrow-ten\" title=\"Previous market value: €75.00m\"> </span></td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/wesley-fofana/marktwertverlauf/spieler/475411\">€65.00m</a> </td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/mason-mount/marktwertverlauf/spieler/346483\">€65.00m</a> <span class=\"icons_sprite red-arrow-ten\" title=\"Previous market value: €75.00m\"> </span></td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/trent-alexander-arnold/marktwertverlauf/spieler/314353\">€65.00m</a> <span class=\"icons_sprite red-arrow-ten\" title=\"Previous market value: €70.00m\"> </span></td>,\n",
+       " <td class=\"rechts hauptlink\"><a href=\"/cody-gakpo/marktwertverlauf/spieler/434675\">€60.00m</a> </td>,\n",
+       " <td class=\"rechts hauptlink\">€110.00m <span class=\"icons_sprite top-value-ten\" title=\"Previous market value: €100.00m; Highest value in career: €110.00m\"> </span></td>,\n",
+       " <td class=\"rechts hauptlink\">€85.00m <span class=\"icons_sprite top-value-ten\" title=\"Previous market value: €55.00m; Highest value in career: €85.00m\"> </span></td>,\n",
+       " <td class=\"rechts hauptlink\">€80.00m <span class=\"icons_sprite top-value-ten\" title=\"Previous market value: €60.00m; Highest value in career: €80.00m\"> </span></td>,\n",
+       " <td class=\"rechts hauptlink\">€80.00m <span class=\"icons_sprite green-arrow-ten\" title=\"Previous market value: €55.00m; Highest value in career: €85.00m\"> </span></td>,\n",
+       " <td class=\"rechts hauptlink\">€70.00m <span class=\"icons_sprite red-arrow-ten\" title=\"Previous market value: €80.00m; Highest value in career: €150.00m\"> </span></td>]"
+      ]
+     },
+     "execution_count": 267,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 268,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for value in values:\n",
+    "    value_list.append(value.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['€170.00m\\xa0',\n",
+       " '€110.00m\\xa0',\n",
+       " '€110.00m\\xa0\\xa0',\n",
+       " '€90.00m\\xa0',\n",
+       " '€85.00m\\xa0\\xa0',\n",
+       " '€80.00m\\xa0',\n",
+       " '€80.00m\\xa0',\n",
+       " '€80.00m\\xa0\\xa0',\n",
+       " '€80.00m\\xa0',\n",
+       " '€80.00m\\xa0',\n",
+       " '€80.00m\\xa0\\xa0',\n",
+       " '€75.00m\\xa0',\n",
+       " '€75.00m\\xa0',\n",
+       " '€75.00m\\xa0',\n",
+       " '€75.00m\\xa0',\n",
+       " '€70.00m\\xa0\\xa0',\n",
+       " '€70.00m\\xa0',\n",
+       " '€70.00m\\xa0',\n",
+       " '€70.00m\\xa0',\n",
+       " '€70.00m\\xa0\\xa0',\n",
+       " '€70.00m\\xa0\\xa0',\n",
+       " '€65.00m\\xa0',\n",
+       " '€65.00m\\xa0\\xa0',\n",
+       " '€65.00m\\xa0\\xa0',\n",
+       " '€60.00m\\xa0',\n",
+       " '€110.00m\\xa0\\xa0',\n",
+       " '€85.00m\\xa0\\xa0',\n",
+       " '€80.00m\\xa0\\xa0',\n",
+       " '€80.00m\\xa0\\xa0',\n",
+       " '€70.00m\\xa0\\xa0']"
+      ]
+     },
+     "execution_count": 269,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "value_list"
    ]
   },
   {
