cleaned data and uploaded to s3 bucket

--- a/scrap.ipynb
+++ b/scrap.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
     "age_list = []\n",
     "position_list = []\n",
     "value_list = []\n",
-    "nationality_list = []"
+    "badge_list = []"
    ]
   },
   {
@@ -129,6 +129,31 @@
     "    values = soup.find_all(\"td\", class_=\"rechts hauptlink\")\n",
     "    for value in values:\n",
     "        value_list.append(value.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "badges = soup.find_all(\"td\", class_=\"zentriert\")\n",
+    "for badge in badges:\n",
+    "    flags = badge.find_all('img')  \n",
+    "    if flags:  \n",
+    "        first_flag = flags[0]  \n",
+    "        first_badge = first_flag['title']\n",
+    "        badge_list.append(first_badge)\n",
+    "        print(first_nationality)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nationality_list"
    ]
   },
   {
@@ -251,22 +276,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[36], line 12\u001b[0m\n\u001b[0;32m     10\u001b[0m flags \u001b[39m=\u001b[39m nation\u001b[39m.\u001b[39mfind(\u001b[39m'\u001b[39m\u001b[39mimg\u001b[39m\u001b[39m'\u001b[39m)  \n\u001b[0;32m     11\u001b[0m \u001b[39mif\u001b[39;00m flags:  \n\u001b[1;32m---> 12\u001b[0m     first_flag \u001b[39m=\u001b[39m flags[\u001b[39m0\u001b[39;49m]  \n\u001b[0;32m     13\u001b[0m     first_nationality \u001b[39m=\u001b[39m first_flag[\u001b[39m'\u001b[39m\u001b[39mtitle\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m     14\u001b[0m     nationality_list\u001b[39m.\u001b[39mappend(first_nationality)\n",
-      "File \u001b[1;32mc:\\Users\\WadirMalik\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\bs4\\element.py:1529\u001b[0m, in \u001b[0;36mTag.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   1526\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__getitem__\u001b[39m(\u001b[39mself\u001b[39m, key):\n\u001b[0;32m   1527\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"tag[key] returns the value of the 'key' attribute for the Tag,\u001b[39;00m\n\u001b[0;32m   1528\u001b[0m \u001b[39m    and throws an exception if it's not there.\"\"\"\u001b[39;00m\n\u001b[1;32m-> 1529\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mattrs[key]\n",
-      "\u001b[1;31mKeyError\u001b[0m: 0"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for pagenum in range(1, 5):\n",
     "    URL = \"https://www.transfermarkt.co.uk/premier-league/marktwerte/wettbewerb/GB1/page/\" + str(pagenum)\n",
@@ -274,15 +286,96 @@
     "    soup = BeautifulSoup(r.content, 'html.parser')\n",
     "    table = soup.find(\"table\", class_='items')\n",
     "    tbody = table.find(\"tbody\")\n",
-    "    nationality = tbody.find_all(\"td\", class_=\"zentriert\")\n",
-    "    #rows = tbody.find_all(\"tr\")\n",
-    "    for nation in nationality:\n",
-    "        flags = nation.find('img')  \n",
+    "    badges = tbody.find_all(\"td\", class_=\"zentriert\")\n",
+    "    for badge in badges:\n",
+    "        flags = badge.find_all('img')  \n",
     "        if flags:  \n",
     "            first_flag = flags[0]  \n",
-    "            first_nationality = first_flag['title']\n",
-    "            nationality_list.append(first_nationality)\n",
-    "            print(first_nationality)\n"
+    "            first_badge = first_flag['title']\n",
+    "            badge_list.append(first_badge)\n",
+    "            print(first_badge)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "badge_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del badge_list[-5:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indexes_to_delete = [219, 218, 217, 216, 215, 164, 163, 162, 161, 160, 109, 108, 107, 106, 105, 54, 53, 52, 51, 50]\n",
+    "\n",
+    "for index in indexes_to_delete:\n",
+    "    del badge_list[index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "badge_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nationality_list = badge_list[::2]\n",
+    "club_list = badge_list[1::2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nationality_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "club_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for nation in nationality:\n",
+    "    flags = nation.find('img')  \n",
+    "    if flags:  \n",
+    "        first_flag = flags['0']  \n",
+    "        first_nationality = first_flag['title']\n",
+    "        nationality_list.append(first_nationality)\n",
+    "        print(first_nationality)"
    ]
   },
   {
@@ -366,7 +459,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_players[72]"
+    "all_players"
    ]
   },
   {
@@ -397,8 +490,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.DataFrame(final_players, columns=['Rank', 'null', 'null1', 'Player', 'Position', 'null3', 'Age', 'null4', 'Value'])\n",
-    "print(df)\n"
+    "df = pd.DataFrame(final_players, columns=['Rank', 'null', 'null1', 'Player', 'Position', 'null3', 'Age', 'null4', 'Value'])\n"
    ]
   },
   {
@@ -408,6 +500,97 @@
    "outputs": [],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Nationality'] = nationality_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Club'] = club_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "USER_AGENT = 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/111.0.0.0 Safari/537.36'\n",
+    "URL_TEMPLATE = 'https://www.transfermarkt.co.uk/premier-league/marktwerte/wettbewerb/GB1/page/{}'\n",
+    "headers = {'User-Agent': USER_AGENT}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scrape_webpage(url):\n",
+    "    response = requests.get(url=url, headers=headers)\n",
+    "    return BeautifulSoup(response.content, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_players = []\n",
+    "for pagenum in range(1, 5):\n",
+    "    url = URL_TEMPLATE.format(pagenum)\n",
+    "    soup = scrape_webpage(url)\n",
+    "    table = soup.find(\"table\", class_='items')\n",
+    "    tbody = table.find(\"tbody\")\n",
+    "    rows = tbody.find_all(\"tr\")\n",
+    "    for row in rows:\n",
+    "        cols = row.find_all('td')\n",
+    "        cols = [col.text.strip() for col in cols]\n",
+    "        all_players.append(cols)\n",
+    "final_players = [all_players[i] for i in range(len(all_players)) if i % 3 == 0]\n",
+    "print(final_players)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_players = []\n",
+    "for pagenum in range(1, 5):\n",
+    "    URL = \"https://www.transfermarkt.co.uk/premier-league/marktwerte/wettbewerb/GB1/page/\" + str(pagenum)\n",
+    "    r = requests.get(url=URL, headers=headers)\n",
+    "    soup = BeautifulSoup(r.content, 'html.parser')\n",
+    "    table = soup.find(\"table\", class_='items')\n",
+    "    tbody = table.find(\"tbody\")\n",
+    "    rows = tbody.find_all(\"tr\")\n",
+    "\n",
+    "    for row in rows:\n",
+    "        cols = row.find_all('td')\n",
+    "        cols = [col.text.strip() for col in cols]\n",
+    "        all_players.append(cols)\n",
+    "\n",
+    "final_players = [all_players[i] for i in range(len(all_players)) if i % 3 == 0]"
    ]
   },
   {
